Refactor hash generation and caching logic