@@ -9,6 +9,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -27,20 +28,22 @@ public class TransactionServiceTest {
     private TransactionService transactionService;
 
     private final int batchSize = 3;
+
     @Test
-    void testSaveHashBatchSuccess() {
-        List<Long> uniqueNumbers = List.of(1L, 2L, 3L);
-        List<String> encodedNumbers = List.of("a", "b", "c");
-        List<Hash> hashBatch = List.of(new Hash("a"), new Hash("b"), new Hash("c"));
-        when(hashRepository.getUniqueNumbers(batchSize)).thenReturn(uniqueNumbers);
-        when(base62Encoder.encodeBatch(uniqueNumbers)).thenReturn(encodedNumbers);
+    public void testSaveHashBatch() {
+        int batchSize = 3;
+        List<Long> nums = Arrays.asList(1L, 2L, 3L);
+        List<String> encodedNums = Arrays.asList("a", "b", "c");
+        List<Hash> hashBatch = Arrays.asList(new Hash("a"), new Hash("b"), new Hash("c"));
 
-        List<String> result = transactionService.saveHashBatch(batchSize);
+        when(hashRepository.getUniqueNumbers(batchSize)).thenReturn(nums);
+        when(base62Encoder.encodeBatch(nums)).thenReturn(encodedNums);
 
-        verify(hashRepository).getUniqueNumbers(batchSize);
-        verify(base62Encoder).encodeBatch(uniqueNumbers);
+        transactionService.saveHashBatch(batchSize);
+
+        verify(hashRepository, times(1)).getUniqueNumbers(batchSize);
+        verify(base62Encoder, times(1)).encodeBatch(nums);
         verify(hashRepository, times(1)).saveAll(hashBatch);
-        assertEquals(encodedNumbers, result);
     }
 
     @Test
@@ -48,7 +51,7 @@ public class TransactionServiceTest {
         List<String> mockHashBatch = List.of("x", "y", "z");
         when(hashRepository.removeAndGetHashBatch(batchSize)).thenReturn(mockHashBatch);
 
-        List<String> result = transactionService.getHashBatch(batchSize);
+        List<String> result = transactionService.removeAndGetHashes(batchSize);
 
         verify(hashRepository, times(1)).removeAndGetHashBatch(batchSize);
         assertEquals(mockHashBatch, result);
@@ -59,7 +62,7 @@ public class TransactionServiceTest {
         List<String> emptyHashBatch = List.of();
         when(hashRepository.removeAndGetHashBatch(batchSize)).thenReturn(emptyHashBatch);
 
-        List<String> result = transactionService.getHashBatch(batchSize);
+        List<String> result = transactionService.removeAndGetHashes(batchSize);
 
         verify(hashRepository, times(1)).removeAndGetHashBatch(batchSize);
         assertEquals(emptyHashBatch, result);
